Basic scaffolding and resets.

--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -30,9 +30,12 @@
       "imports": [
         "0-variables/_variables-dir.sass",
         "1-plugins/_plugins-dir.sass",
-        "2-base/_base.scss",
+        "2-base/_base_dir.sass",
         "3-modules/_modules-dir.sass",
-        "0-variables/_colors.sass"
+        "0-variables/_colors.sass",
+        "2-base/_reset.sass",
+        "2-base/_typography.sass",
+        "3-modules/_index.sass"
       ]
     }
   ],
