Hero landing completed

--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -33,14 +33,19 @@
         "2-base/_base_dir.sass",
         "3-modules/_modules-dir.sass",
         "0-variables/_colors.sass",
+        "0-variables/_misc.sass",
+        "0-variables/_document.sass",
         "2-base/_reset.sass",
         "2-base/_typography.sass",
-        "3-modules/_index.sass"
+        "2-base/_common.sass",
+        "3-modules/index/_index.sass",
+        "3-modules/index/_navigation.sass",
+        "3-modules/index/_hero-landing.sass"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
