Added brands section

--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -40,7 +40,8 @@
         "2-base/_common.sass",
         "3-modules/index/_index.sass",
         "3-modules/index/_navigation.sass",
-        "3-modules/index/_hero-landing.sass"
+        "3-modules/index/_hero-landing.sass",
+        "3-modules/index/_brands.sass"
       ]
     }
   ],
