Features section added

--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -41,7 +41,8 @@
         "3-modules/index/_index.sass",
         "3-modules/index/_navigation.sass",
         "3-modules/index/_hero-landing.sass",
-        "3-modules/index/_brands.sass"
+        "3-modules/index/_brands.sass",
+        "3-modules/index/_features.sass"
       ]
     }
   ],
