--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -42,7 +42,8 @@
         "3-modules/index/_navigation.sass",
         "3-modules/index/_hero-landing.sass",
         "3-modules/index/_brands.sass",
-        "3-modules/index/_features.sass"
+        "3-modules/index/_features.sass",
+        "3-modules/index/_jackpots.sass"
       ]
     }
   ],
