--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -43,7 +43,8 @@
         "3-modules/index/_hero-landing.sass",
         "3-modules/index/_brands.sass",
         "3-modules/index/_features.sass",
-        "3-modules/index/_jackpots.sass"
+        "3-modules/index/_jackpots.sass",
+        "3-modules/index/_more-features.sass"
       ]
     }
   ],
