Added latest code-integration seciton.

--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -44,7 +44,8 @@
         "3-modules/index/_brands.sass",
         "3-modules/index/_features.sass",
         "3-modules/index/_jackpots.sass",
-        "3-modules/index/_more-features.sass"
+        "3-modules/index/_more-features.sass",
+        "3-modules/index/_latest-code.sass"
       ]
     }
   ],
