--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -45,7 +45,8 @@
         "3-modules/index/_features.sass",
         "3-modules/index/_jackpots.sass",
         "3-modules/index/_more-features.sass",
-        "3-modules/index/_latest-code.sass"
+        "3-modules/index/_latest-code.sass",
+        "3-modules/index/_why-choose.sass"
       ]
     }
   ],
