Ultimate features section added.

--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -46,7 +46,8 @@
         "3-modules/index/_jackpots.sass",
         "3-modules/index/_more-features.sass",
         "3-modules/index/_latest-code.sass",
-        "3-modules/index/_why-choose.sass"
+        "3-modules/index/_why-choose.sass",
+        "3-modules/index/_ultimate-features.sass"
       ]
     }
   ],
