--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -47,7 +47,8 @@
         "3-modules/index/_more-features.sass",
         "3-modules/index/_latest-code.sass",
         "3-modules/index/_why-choose.sass",
-        "3-modules/index/_ultimate-features.sass"
+        "3-modules/index/_ultimate-features.sass",
+        "3-modules/index/_footer.sass"
       ]
     }
   ],
