--- a/styles/sass/prepros-6.config
+++ b/styles/sass/prepros-6.config
@@ -48,7 +48,8 @@
         "3-modules/index/_latest-code.sass",
         "3-modules/index/_why-choose.sass",
         "3-modules/index/_ultimate-features.sass",
-        "3-modules/index/_footer.sass"
+        "3-modules/index/_footer.sass",
+        "3-modules/index/_pricing.sass"
       ]
     }
   ],
